--- a/app/src/main/res/layout/activity_user_show_details.xml
+++ b/app/src/main/res/layout/activity_user_show_details.xml
@@ -6,9 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".UserShowDetails">
 
-    <TextView
-        android:id="@+id/email"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+             />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
