--- a/app/src/main/res/layout/activity_user_show_details.xml
+++ b/app/src/main/res/layout/activity_user_show_details.xml
@@ -11,6 +11,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            />
+
         <TextView
             android:id="@+id/fname"
             android:layout_width="match_parent"
