--- a/app/src/main/res/layout/activity_user_show_details.xml
+++ b/app/src/main/res/layout/activity_user_show_details.xml
@@ -9,30 +9,98 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:weightSum="5"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Profile"
+            android:textColor="#1B1010"
+            android:textSize="48sp"
+            android:textStyle="normal|bold" />
 
         <ImageView
             android:id="@+id/img"
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            />
+            android:layout_gravity="center"
+            android:padding="25dp" />
 
-        <TextView
-            android:id="@+id/fname"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/lname"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-             />
+            android:orientation="horizontal"
+            android:padding="20dp">
 
-        <TextView
-            android:id="@+id/email"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="normal|bold"
+                android:layout_weight="1"
+                android:textSize="48sp"
+                android:text="First name" />
+
+            <TextView
+                android:id="@+id/fname"
+                android:layout_width="wrap_content"
+                android:textSize="48sp"
+                android:textStyle="normal|bold"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-             />
+            android:textStyle="normal|bold"
+            android:orientation="horizontal"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:textSize="48sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="normal|bold"
+                android:layout_weight="1"
+                android:text="Last name" />
+
+            <TextView
+                android:id="@+id/lname"
+                android:textSize="48sp"
+                android:textStyle="normal|bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:textSize="48sp"
+            android:layout_height="wrap_content"
+            android:textStyle="normal|bold"
+            android:orientation="horizontal"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:textSize="48sp"
+                android:layout_height="wrap_content"
+                android:textStyle="normal|bold"
+                android:layout_weight="1"
+                android:text="EmailId" />
+
+            <TextView
+                android:id="@+id/email"
+                android:textSize="48sp"
+                android:layout_width="wrap_content"
+                android:textStyle="normal|bold"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
